adding the DMEM unit

--- a/MIPSR4000/MIPSR4000.vcxproj.filters
+++ b/MIPSR4000/MIPSR4000.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="cache.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dmem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
