--- a/MIPSR4000/MIPSR4000.vcxproj
+++ b/MIPSR4000/MIPSR4000.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cache.h" />
+    <ClInclude Include="dmem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
